src/core-crm/objects/Program_Enrollment_Breach__c/Program_Enrollment_Breach__c.object-meta.xml
<CustomObject>
    <description>Contains a list of student breaches, i.e. relationship between a breach and a contact.</description>
    <label>Program Enrollment Breach</label>
    <nameField>
        <displayFormat>PEB-{00000}</displayFormat>
        <label>Program Enrollment Breach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollment Breaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>