src/core-crm/objects/Program_Enrollment_Breach__c/fields/Breach_Date__c.field-meta.xml
<CustomField>
    <fullName>Breach_Date__c</fullName>
    <description>The date the breach started</description>
    <label>Breach Date</label>
    <type>Date</type>
</CustomField>