src/core-crm/objects/Program_Enrollment_Breach__c/fields/Breach_Name__c.field-meta.xml
<CustomField>
    <fullName>Breach_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Business assigned unique identifier</description>
    <label>Breach Name</label>
    <referenceTo>Breach__c</referenceTo>
    <relationshipLabel>Program Enrollment Breaches</relationshipLabel>
    <relationshipName>Program_Enrollment_Breaches</relationshipName>
    <type>Lookup</type>
</CustomField>