src/core-crm/objects/Program_Enrollment_Breach__c/fields/Breach_Status__c.field-meta.xml
<CustomField>
    <fullName>Breach_Status__c</fullName>
    <description>The status of the breach that comes from SAMS integration</description>
    <label>Breach Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>