src/core-crm/objects/Program_Enrollment_Breach__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The student in breach</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollment Breaches</relationshipLabel>
    <relationshipName>Program_Enrollment_Breaches</relationshipName>
    <type>Lookup</type>
</CustomField>