src/core-crm/objects/Program_Enrollment_Breach__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The program in breach</description>
    <label>Program Enrollment</label>
    <referenceTo>hed__Program_Enrollment__c</referenceTo>
    <relationshipLabel>Program Enrollment Breaches</relationshipLabel>
    <relationshipName>Program_Enrollment_Breaches</relationshipName>
    <type>Lookup</type>
</CustomField>