src/core-crm/objects/Program_Enrollment_Breach__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The study period the breach occurred</description>
    <label>Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Program Enrollment Breaches</relationshipLabel>
    <relationshipName>Program_Enrollment_Breaches</relationshipName>
    <type>Lookup</type>
</CustomField>