src/core-crm/objects/Program_Enrollment_Breach__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Program_Enrollment__c</columns>
    <columns>Breach_Name__c</columns>
    <columns>Breach_Date__c</columns>
    <columns>Breach_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>Student_Success_Outreach_Manager</group>
        <group>Student_Success_Outreach_Staff</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>